[gd_scene load_steps=16 format=3 uid="uid://bmub24y5cb3x"]

[ext_resource type="Texture2D" uid="uid://mail7gk15i33" path="res://Main Character.png" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://dkv8hlj43mkf1" path="res://control.gd" id="2_5vw27"]
[ext_resource type="Texture2D" uid="uid://bopmpmwiko87q" path="res://close.png" id="2_272bh"]
[ext_resource type="Script" uid="uid://dyekbi2qvi2d6" path="res://player.gd" id="3_7mycd"]
[ext_resource type="Texture2D" uid="uid://blupm5xotagnw" path="res://Background paint finished.png" id="3_lquwl"]
[ext_resource type="Texture2D" uid="uid://bt3a5mpk76rgt" path="res://SnowyGroungTexture.png" id="4_1bvp3"]
[ext_resource type="Texture2D" uid="uid://bss12lmwgkr5a" path="res://The Silver Winter(artwork)/snow_particle.png" id="6_7mycd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_272bh"]
size = Vector2(47, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vw27"]
size = Vector2(10.5, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(13, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kek77"]
size = Vector2(18, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c57u"]
size = Vector2(16, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(638, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(23, 366)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_272bh"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 0, 1)
direction = Vector3(1, 1, 0)
spread = 40.0
initial_velocity_min = 5.0
initial_velocity_max = 15.0
gravity = Vector3(50, 65, 0)

[node name="Main" type="Node"]
script = ExtResource("2_5vw27")

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="ResolutionList" type="OptionButton" parent="control"]
z_index = 2
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.425
anchor_top = -2.45
anchor_right = 0.09499969
anchor_bottom = -2.125
offset_right = 32.0
offset_bottom = 20.0
metadata/_edit_use_anchors_ = true

[node name="ApplyButton" type="Button" parent="control"]
z_index = 2
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.425
anchor_top = -1.6
anchor_right = 1.118421
anchor_bottom = -1.025
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(0.76, 0.84000003)
text = "Apply"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="control"]
z_index = 2
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -2.1
anchor_top = -3.0166667
anchor_right = 2.15
anchor_bottom = -3.0166667
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.16854045, 0.17207643, 0.15009439, 0)
text = "Please set your resolution"
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="Button" parent="control"]
z_index = 2
texture_filter = 1
layout_mode = 0
offset_left = -104.0
offset_top = -125.0
offset_right = 62.66327
offset_bottom = 41.66327
scale = Vector2(0.12000243, 0.12000243)
icon = ExtResource("2_272bh")
expand_icon = true

[node name="BackgroundPaintFinished" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, 1)
texture = ExtResource("3_lquwl")

[node name="StaticBody2D" type="StaticBody2D" parent="BackgroundPaintFinished"]

[node name="horizontal log" type="CollisionShape2D" parent="BackgroundPaintFinished/StaticBody2D"]
position = Vector2(285.5, 119.5)
shape = SubResource("RectangleShape2D_272bh")

[node name="second static body" type="StaticBody2D" parent="BackgroundPaintFinished"]

[node name="vertical log" type="CollisionShape2D" parent="BackgroundPaintFinished/second static body"]
position = Vector2(314.25, 89)
shape = SubResource("RectangleShape2D_5vw27")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 1)

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("3_7mycd")

[node name="MainCharacterSprite" type="Sprite2D" parent="Player"]
z_index = 1
texture_filter = 1
position = Vector2(-37, 118)
texture = ExtResource("2_1bvp3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
z_index = 1
position = Vector2(-38.5, 122)
shape = SubResource("RectangleShape2D_h2yge")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player"]
z_index = 1
position = Vector2(-38, 121)
shape = SubResource("RectangleShape2D_kek77")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Player"]
z_index = 1
position = Vector2(-37, 132.5)
shape = SubResource("RectangleShape2D_4c57u")

[node name="SnowyGround" type="StaticBody2D" parent="."]
position = Vector2(54, 162)

[node name="GroundSprite" type="Sprite2D" parent="SnowyGround"]
visible = false
position = Vector2(0, -9)
texture = ExtResource("4_1bvp3")

[node name="GroundCollision" type="CollisionShape2D" parent="SnowyGround"]
position = Vector2(-55, -17)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(330.5, 3)
shape = SubResource("RectangleShape2D_lquwl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(-332, 0)
shape = SubResource("RectangleShape2D_lquwl")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(-440, -315)
scale = Vector2(28.037544, 2.4022725)
amount = 300
texture = ExtResource("6_7mycd")
lifetime = 6.0
process_material = SubResource("ParticleProcessMaterial_272bh")
